--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,8 @@
     <ul>
     {% for posts in category %}
       {% for post in posts %}        
-        <li class='{{ post.type }}'><a href='#{{ post.url }}'>{{ post.title }}</a></li>
+        <!-- <li class='{{ post.type }}'><a href='#{{ post.url }}'>{{ post.title }}</a></li> -->
+        <li><a href="{{ category.url }}"></a></li>
       {% endfor %}
     {% endfor %}
     </ul>
