--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
     {% for posts in category %}
       {% for post in posts %}        
         <!-- <li class='{{ post.type }}'><a href='#{{ post.url }}'>{{ post.title }}</a></li> -->
-        <li><a href="{{ category.url }}"></a></li>
+        <li><a href="{{ category }}"></a></li>
       {% endfor %}
     {% endfor %}
     </ul>
